--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,11 @@ plugins {
     id 'org.springframework.boot' version '2.6.6'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'maven-publish'
 }
 
-group = 'com.spring.custom'
+
+group = 'com.github.Ye-Ji-Kim'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
