--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,14 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from components.java
+        }
+    }
+}
+
 tasks.named('test') {
     useJUnitPlatform()
 }
