--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.6.6'
+    id 'org.springframework.boot' version '2.3.3.RELEASE'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id 'maven-publish'
@@ -9,7 +9,6 @@ plugins {
 group = 'com.github.Ye-Ji-Kim'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
-targetCompatibility = '11'
 
 configurations {
     compileOnly {
@@ -31,7 +30,16 @@ dependencies {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            artifact jar
+            from components.java
+
+            versionMapping {
+                usage('java-api') {
+                    fromResolutionOf('runtimeClasspath')
+                }
+                usage('java-runtime') {
+                    fromResolutionResult()
+                }
+            }
         }
     }
 }
